--- a/Preface.tex
+++ b/Preface.tex
@@ -20,7 +20,7 @@ The thesis consists of this rapport together with a number of files included as 
     \vspace{5mm}
     \newline
   %Update signature image file in line below
-    \includegraphics[scale=0.5]{figures/SignatureDummy}
+    \includegraphics[scale=0.5]{figures/Signature}
 \end{center}
 \begin{flushright}
     \thesisauthor
