--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -1,11 +1,6 @@
 \chapter{Test Diagrams}
 
-Document from Infomedia about the general Vector Spaced Search.\\
-Thesis document from Inge\\
-The algorithm course book..\\
-Example XML document (article) - to show what the XML documents look like.
-
-Examples of comparing two articles with LCS.
+Examples of comparing two articles with LCS. More files can be found in the electronic appendixes.
 
 \begin{sidewaysfigure}
 	\includegraphics[scale=0.65]{figures/LcsExample}
